--- a/css/styles.css
+++ b/css/styles.css
@@ -2,27 +2,29 @@
 
 *,
 *::before,
-*::after { box-sizing: border-box; }
+*::after {
+  box-sizing: border-box;
+}
 
 html {
-  font-size: 10px;
-  font-family: Arial, Helvetica, sans-serif;
   color: #333;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 10px;
   line-height: 1.4;
 }
 body {
+  background-color: #fdfdfd;
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  position: relative;
-  margin: 0;
   font-size: 1.6rem;
-  background-color: #fdfdfd;
+  height: 100vh;
+  margin: 0;
+  position: relative;
 }
 ul, li {
+  color: #333;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 10pt;
-  color: #333;
 }
 a {
   color: orange;
@@ -46,16 +48,16 @@ header {
   flex: 0 0 auto;
 }
 #maincontent {
-  flex: 1 1 auto;
+  background-color: #f3f3f3;
   display: flex;
   flex-direction: column;
+  flex: 1 1 auto;
   overflow: auto;
-  background-color: #f3f3f3;
 }
 #footer {
-  flex: 0 0 auto;
   background-color: #444;
   color: #aaa;
+  flex: 0 0 auto;
   font-size: 8pt;
   letter-spacing: 1px;
   padding: 25px;
@@ -67,21 +69,21 @@ header {
 }
 /* ====================== Navigation ====================== */
 header nav {
-  display: flex;
   align-items: center;
   background-color: #252831;
-  text-align:center;
+  display: flex;
   min-height: 60px;
+  text-align:center;
 }
 header nav h1 {
   flex: 1 1 100%;
+  font-size: 1.6rem;
+  font-weight: 200;
+  letter-spacing: 10px;
+  line-height: 1.2;
   margin: 0;
   padding: 8px 15px;
   text-align: center;
-  font-size: 1.6rem;
-  line-height: 1.2;
-  font-weight: 200;
-  letter-spacing: 10px;
   text-transform: uppercase;
 }
 header nav h1 a {
@@ -89,10 +91,10 @@ header nav h1 a {
 }
 
 #breadcrumb {
-  padding: 10px 15px;
-  list-style: none;
   font-size: 1.2rem;
+  list-style: none;
   margin: 0 0 20px;
+  padding: 10px 15px;
 }
 
 /* Display list items side by side */
@@ -102,9 +104,9 @@ header nav h1 a {
 
 /* Add a slash symbol (/) before/behind each list item */
 #breadcrumb li+li:before {
-  padding: 8px;
   color: black;
   content: "/\00a0";
+  padding: 8px;
 }
 
 /* Add a color to all links inside the list */
@@ -120,39 +122,39 @@ header nav h1 a {
 }
 /* ====================== Map ====================== */
 #map-container {
-  width: 100%;
   height: 50vh;
   order: -1;
+  width: 100%;
 }
 #map {
+  background-color: #ccc;
   height: 100%;
   width: 100%;
-  background-color: #ccc;
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
-  display: flex;
   align-items: center;
   background-color: #3397DB;
+  display: flex;
   padding: 6px 6px;
 }
 .filter-options h2 {
-  flex: 0 0 auto;
-  margin: 0;
   color: white;
+  flex: 0 0 auto;
   font-size: 1.4rem;
   font-weight: 300;
   line-height: 1;
+  margin: 0;
 }
 .filter-options select {
-  flex: 1 1 100%;
+  -webkit-appearance: none;
   background-color: white;
   border: 1px solid #fff;
+  flex: 1 1 100%;
   font-size: 1.2rem;
   letter-spacing: 0;
   margin: 0 0 0 6px;
   padding: 5px 8px;
-  -webkit-appearance: none;
 }
 
 /* ====================== Restaurant Listing ====================== */
@@ -168,8 +170,8 @@ header nav h1 a {
 }
 .restaurant-card {
   background-color: #fff;
-  border: 1px solid #ccc;
   border-radius: 3px;
+  border: 1px solid #ccc;
   box-shadow: 0 1px 4px #ccc;
   padding: 0;
   text-align: left;
@@ -178,12 +180,12 @@ header nav h1 a {
   margin-top: 20px;
 }
 .restaurant-card .restaurant-img {
-  padding-bottom: 50%;
-  background-size: cover;
+  background-color: #ccc;
   background-position: center;
   background-repeat: no-repeat;
-  background-color: #ccc;
+  background-size: cover;
   border-radius: 2px 2px 0 0;
+  padding-bottom: 50%;
 }
 .restaurant-card .restaurant-details {
   padding: 20px 20px;
@@ -198,17 +200,17 @@ header nav h1 a {
   text-transform: uppercase;
 }
 .restaurant-card p {
-  margin: 0;
   font-size: 1.6rem;
+  margin: 0;
 }
 .restaurant-card .restaurant-more {
-  display: block;
-  margin: 25px 0 0 0;
   background-color: orange;
   border-radius: 2px;
   box-shadow: 0 2px 3px #ddd;
   color: #fff;
+  display: block;
   font-size: 1.4rem;
+  margin: 25px 0 0 0;
   padding: 10px 30px;
   text-align: center;
   text-decoration: none;
@@ -224,13 +226,13 @@ header nav h1 a {
   font-size: 2.4rem;
   font-weight: 200;
   letter-spacing: 0;
+  line-height: 1.1;
   margin: 0;
   text-transform: uppercase;
-  line-height: 1.1;
 }
 #restaurant-img {
-  max-width: 100%;
   height: auto !important;
+  max-width: 100%;
 }
 #restaurant-address {
   font-size: 2rem;
@@ -248,9 +250,9 @@ header nav h1 a {
   text-transform: uppercase;
 }
 #restaurant-hours {
-  width: 100%;
   font-size: 1.3rem;
   margin: 0 10px;
+  width: 100%;
 }
 #restaurant-hours td {
   color: #666;
@@ -258,36 +260,35 @@ header nav h1 a {
 #restaurant-hours td:first-child {
   width: 25%;
 }
-
 #reviews-container {
   margin: 30px 0 0;
 }
 #reviews-container h2 {
-  overflow: hidden;
   color: #f58500;
   font-size: 2rem;
   font-weight: 300;
   margin: 0;
+  overflow: hidden;
   text-align: center;
 }
 #reviews-container h2 span {
-  position: relative;
   padding: 0 10px;
+  position: relative;
 }
 #reviews-container h2 span::before,
 #reviews-container h2 span::after {
+  background-color: #ccc;
   content: "";
   height: 1px;
-  background-color: #ccc;
   position: absolute;
-  top: 50%;
   right: 100%;
-  width: 100vw;
+  top: 50%;
   transform: translate(0,-50%);
+  width: 100vw;
 }
 #reviews-container h2 span::after {
-  right: auto;
   left: 100%;
+  right: auto;
 }
 
 #reviews-list {
@@ -310,12 +311,12 @@ header nav h1 a {
   margin: 0;
 }
 #reviews-list li .review-rating {
-  float: left;
   color: #FEAB39;
+  float: left;
 }
 #reviews-list li .review-date {
-  float: right;
   color: #999;
+  float: right;
 }
 #reviews-list li .review-text {
   clear: both;
@@ -332,12 +333,12 @@ header nav h1 a {
 
 @media screen and (min-width: 500px) and (max-width: 799px) {
   .restaurant-card {
-    display: flex;
     align-items: center;
+    display: flex;
   }
   .restaurant-card .restaurant-img {
-    flex: 0 0 50%;
     border-radius: 2px 0 0 2px;
+    flex: 0 0 50%;
   }
   .restaurant-card .restaurant-details {
     flex: 1 1 100%;
@@ -347,8 +348,8 @@ header nav h1 a {
 
 @media screen and (min-width: 800px) {
   #maincontent {
-    flex: 1 1 100%;
     flex-direction: row;
+    flex: 1 1 100%;
   }
   #map-container {
     flex: 0 0 60%;
@@ -356,15 +357,15 @@ header nav h1 a {
     position: relative;
   }
   #map-container::before {
+    bottom: -10px;
+    box-shadow: inset 0 0 2px #aaa;
     content: "";
+    left: -10px;
     pointer-events: none;
     position: absolute;
-    z-index: 9;
-    top: -10px;
     right: 0;
-    bottom: -10px;
-    left: -10px;
-    box-shadow: inset 0 0 2px #aaa;
+    top: -10px;
+    z-index: 9;
   }
   .list-wrap {
     flex: 0 0 40%;
